Fix msg visibility issue

--- a/connection.css
+++ b/connection.css
@@ -62,7 +62,6 @@ label{
 }
 
 #connectionMsg{
-	display:none;
 	color:#db2828;
 	background-color:white;
 	border-left:1px solid #db2828;
